--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yandex-touchsearch",
+  "name": "yandex-touch-serp",
   "version": "1.0.0",
   "description": "",
-  "main": "yandex-touchsearch.sketchplugin",
+  "main": "yandex-touch-serp.sketchplugin",
   "manifest": "src/manifest.json",
   "scripts": {
     "build": "skpm build",
